# howtocook-py-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION_SUMMARY.md  DEVELOPER_GUIDE.md  FEATURES.md  Makefile  OPTIMIZATION.md  PROJECT_STRUCTURE.md  README.md  README_EN.md  SERVER_CONFIG.md  example_usage.py  fastmcp.json  fastmcp.toml  main.py  pyproject.toml  pytest.ini  requirements.txt  server.py  start_dev.sh  start_server.sh  test_mcp_server.py  test_server.py
docs/: API.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEATURES.md  README.md
src/: __init__.py
src/core/: __init__.py  app.py  config.py
src/domain/: __init__.py
src/domain/models/: __init__.py  grocery.py  meal_plan.py  recipe.py
src/domain/repositories/: __init__.py  recipe_repository.py
src/domain/services/: __init__.py  meal_service.py  recipe_service.py  recommendation_service.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  memory_cache.py
src/infrastructure/middleware/: __init__.py  error_handler.py  timing_middleware.py
src/infrastructure/monitoring/: __init__.py  health_checker.py  performance_monitor.py
src/mcp/: __init__.py
src/mcp/prompts/: __init__.py  meal_planning.py  recipe_recommendation.py
src/mcp/resources/: __init__.py  api_resources.py
src/mcp/tools/: __init__.py  meal_tools.py  recipe_tools.py  recommendation_tools.py
src/shared/: __init__.py  constants.py  utils.py
tests/integration/: test_mcp_server.py  test_server.py
tests/unit/: test_recipe_service.py
