[project]
name = "howtocook-py-mcp"
version = "0.2.0"
description = "菜谱助手 MCP 服务 - 提供菜谱查询、推荐和膳食计划功能"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "damon wang", email = "wmdyx@outlook.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "recipes", "cooking", "meal-planning", "fastmcp", "chinese-cuisine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Home Automation",
]
dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yutayouguan/howtocook-py-mcp"
Repository = "https://github.com/yutayouguan/howtocook-py-mcp.git"
Issues = "https://github.com/yutayouguan/howtocook-py-mcp/issues"
Documentation = "https://github.com/yutayouguan/howtocook-py-mcp/blob/main/README.md"

[project.scripts]
howtocook-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
